Archive2/d8/61846273451ff3/main.cpp
#pragma once

#include <iostream>
namespace foo
{
    class boo
    {
        void somemethod();
    };
}

namespace doo
{
    void boo::somemethod()
    {
        std::cout << "Hey, it works"; 
    }
}

int main()
{
    boo b;
    b.somethod();
}